@@ -9,6 +9,7 @@ This is possible on different devices along as the port number is the same and i
 ### How to Clone ###
 1) Download the Java files below
 ![alt text](https://github.com/JadenNgoOT/Group-Project-Chat-Room-/blob/main/Download.png?raw=true)
+2) Add vm options for Javafx. With this command (--module-path "file/path/to/javafx library" --add-modules javafx.controls,javafx.fxml)
 
 
 ### How to Run ###
